nodered/nodered-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nodered-service
  namespace: nodered
spec:
  ports:
  - port: 1880
    protocol: TCP
  selector:
    app: nodered
