nodered/nodered-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nodered-ingress
  namespace: nodered
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
      - nodered.prod.suse.ninja
    secretName: nodered-secret
  rules:
  - host: nodered.prod.suse.ninja
    http:
      paths:
      - path: /
        backend:
          serviceName: nodered-service
          servicePort: 1880
